--- a/altug.jsonc
+++ b/altug.jsonc
@@ -7,8 +7,12 @@
   ],
   "refresh": 3,
   "highConcept": {
+    "name": "The Big Diplomatic Necromancer",
+    "description": ""
   },
   "trouble": {
+    "name": "Eloquently Friendless",
+    "description": ""
   },
   "aspects": [
   ],
