--- a/karl.jsonc
+++ b/karl.jsonc
@@ -38,6 +38,10 @@
       }
     ],
     "skills": {
+      // one 4
+      // two 3s
+      // two 2s
+      // four 1
       "athletics": 1,
       "academics": 4,
       "crafts": 0,
