--- a/template.jsonc
+++ b/template.jsonc
@@ -13,6 +13,10 @@
   "aspects": [
   ],
   "skills": {
+    // one 4
+    // two 3s
+    // two 2s
+    // four 1
     "athletics": 0,
     "academics": 0,
     "crafts": 0,
